--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,25 @@
 
     <p> <%= startingEJS %> </p>
 
+    <% var str = "Read More"%>
+    <% var link = str.link("/") %>
+
+
+    <%  posts.forEach(function (post){%>
+
+
+     <h1> <%=post.title%> </h1>
+     <p>
+       <%=post.body.substring(0, 100) + "..." %>
+       <a href="/posts/<%=post.title%>">Read More</a> 
+     </p>
+
+  <%  }); %>
+
+
+
+
+
 
 
   <%- include("partials/footer") %>
